fix footer overlap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -104,18 +104,17 @@ html, body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
 }
 
 body {
-  flex: 1 0 auto;
   min-height: 100vh;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   background: #f6fdfe;
   color: #222831;
   font-size: 1.125rem;
   line-height: 1.7;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-content {
